# shasta

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVERSATIONS.md  DEPLOYMENT.md  LICENSE  NOTICE  README.md  SECURITY.md  TRUST.md  VIBE_CODING.md  config.template.toml  pyproject.toml  shasta.config.template.json
.claude/skills/: evidence.md  pentest.md  remediate.md  sbom.md  scan.md
.claude/skills/ai-code-review/: SKILL.md
.claude/skills/ai-scan/: SKILL.md
.claude/skills/connect-aws/: SKILL.md
.claude/skills/connect-azure/: SKILL.md
.claude/skills/connect-gcp/: SKILL.md
.claude/skills/discover-ai/: SKILL.md
.claude/skills/evidence/: SKILL.md
.claude/skills/gap-analysis/: SKILL.md
.claude/skills/iso27001/: SKILL.md
.claude/skills/pentest/: SKILL.md
.claude/skills/policy-gen/: SKILL.md
.claude/skills/remediate/: SKILL.md
.claude/skills/report/: SKILL.md
.claude/skills/review-access/: SKILL.md
.claude/skills/risk-register/: SKILL.md
.claude/skills/sbom/: SKILL.md
.claude/skills/scan/: SKILL.md
.claude/skills/threat-advisory/: SKILL.md
.claude/skills/vendor-risk/: SKILL.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  integrity.yml  release.yml  voice-bundle.yml
docs/: architecture.md  aws-permissions.md  framework-coverage.md
docs/superpowers/plans/: 2026-05-05-shastavoice.md
docs/superpowers/specs/: 2026-05-05-shastavoice-design.md
examples/: config.example.toml
infra/: shasta-scanning-policy.json  transilience-compliance-scanning-policy.json
infra/azure-test-env/: main.tf
infra/test-env/: main.tf  monitoring.tf
infra/test-env/lambda/: alert_forwarder.py
scripts/: test_weekend.py  validate_findings.py
skills/: connect-aws.md  gap-analysis.md  policy-gen.md  report.md  review-access.md  threat-advisory.md
src/shasta/: config.py  scanner.py
src/shasta/aws/: ai_checks.py  ai_discovery.py  ai_sbom.py  backup.py  client.py  cloudfront.py  cloudwatch_logs.py  compute.py  data_warehouse.py  databases.py  encryption.py  iam.py  kms.py  logging_checks.py  networking.py  organizations.py  pentest.py  serverless.py  storage.py  vpc_endpoints.py  vulnerabilities.py
src/shasta/azure/: ai_checks.py  appservice.py  backup.py  client.py  databases.py  diagnostic_settings.py  encryption.py  entra.py  governance.py  iam.py  monitoring.py  networking.py  private_endpoints.py  storage.py
src/shasta/compliance/: _status.py  framework.py  hipaa.py  hipaa_mapper.py  iso27001.py  iso27001_mapper.py  iso27001_scorer.py  mapper.py  scorer.py  testing.py
src/shasta/dashboard/: __main__.py  routes.py
src/shasta/db/: schema.py
src/shasta/evidence/: collector.py  models.py
src/shasta/gcp/: __init__.py  client.py  cloud_run.py  compute.py  encryption.py  iam.py  logging_checks.py  networking.py  storage.py
src/shasta/integrations/: github.py  jira.py  slack.py
src/shasta/policies/: generator.py
src/shasta/questionnaire/: questions.py
src/shasta/remediation/: engine.py
src/shasta/reports/: generator.py  hipaa_report.py  iso27001_report.py  multi_framework_html.py  pdf.py  summary.py
src/shasta/sbom/: discovery.py  vuln_scanner.py
src/shasta/threat_intel/: advisory.py
src/shasta/trustcenter/: config.py  generator.py
src/shasta/voice/: __main__.py  app.py  cli.py  models.py  observability.py  realtime_config.py  session.py  store.py
src/shasta/workflows/: access_review.py  drift.py  risk_register.py
src/transilience_compliance/: __init__.py  cli.py  config.py  scanner.py
src/transilience_compliance/aws/: client.py  encryption.py  iam.py  logging_checks.py  networking.py  pentest.py  storage.py  vulnerabilities.py
src/transilience_compliance/compliance/: framework.py  iso27001.py  (+5 more)
src/whitney/: README.md  TRUST.md
tests/: conftest.py  test_cli.py  test_config.py
tests/integration/: validate_whitney.py
tests/test_aws/: test_aws_checks_functional.py  test_aws_sweep_smoke.py  test_client.py  test_models.py
tests/test_azure/: conftest.py  test_azure_checks_functional.py  test_smoke.py
tests/test_compliance/: test_hipaa_generator.py  test_iso27001_scorer.py  test_mapper.py  test_scorer.py  test_status_walker.py
tests/test_gcp/: conftest.py  test_gcp_checks_functional.py  test_smoke.py
tests/test_integrity/: test_doc_claims.py
tests/test_reports/: test_report_generation.py
tests/test_trustcenter/: test_generator.py
tests/test_whitney/: conftest.py  test_ai_policies.py  test_ai_sbom.py  test_code_checks.py  test_eu_ai_act.py  test_integrity.py  test_iso42001.py  test_mapper.py  test_mitre_atlas.py  test_nist_ai_600_1.py  test_nist_ai_rmf.py  test_owasp_agentic.py  test_owasp_llm_top10.py  test_patterns.py  test_scanner.py  test_scorer.py
tests/test_workflows/: test_drift.py  test_risk_register.py
tests/voice/: conftest.py  test_cli.py  test_models.py  test_observability.py  test_realtime_config.py  test_session.py  test_store_reads.py  test_store_writes.py  test_tool_endpoints.py  test_tools_controls.py  test_tools_findings.py  test_tools_risks.py  test_tools_scans.py  test_tools_scores.py
(+77 files in other folders)
