[project]
name = "shasta"
version = "1.8.0"
description = "Multi-cloud compliance and AI governance platform — SOC 2, ISO 27001, HIPAA, ISO 42001, and EU AI Act"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Transilience AI" }]
keywords = [
    "compliance",
    "soc2",
    "iso27001",
    "hipaa",
    "iso42001",
    "eu-ai-act",
    "aws",
    "azure",
    "security",
    "cloud-security",
    "ai-governance",
    "claude-code",
    "cspm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "boto3>=1.35.0",
    "rich>=13.9.0",
    "jinja2>=3.1.0",
    "xhtml2pdf>=0.2.17",
    "pydantic>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/transilienceai/shasta"
Repository = "https://github.com/transilienceai/shasta"
Issues = "https://github.com/transilienceai/shasta/issues"
Changelog = "https://github.com/transilienceai/shasta/blob/main/CHANGELOG.md"

[project.optional-dependencies]
azure = [
    "azure-identity>=1.17.0",
    "azure-mgmt-resource>=23.0.0",
    "azure-mgmt-subscription>=3.0.0",
    "azure-mgmt-compute>=31.0.0",
    "azure-mgmt-network>=25.0.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-monitor>=6.0.0",
    "azure-mgmt-sql>=3.0.0",
    "azure-mgmt-keyvault>=10.0.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-security>=6.0.0",
    "msgraph-sdk>=1.5.0",
]
gcp = [
    "google-auth>=2.29.0",
    "google-api-python-client>=2.128.0",
    "google-cloud-storage>=2.16.0",
    "google-auth-httplib2>=0.2.0",
]
dashboard = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]
semgrep = [
    "semgrep>=1.150.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "moto[all]>=5.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shasta"]

[tool.hatch.build.targets.wheel.force-include]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
